HW5/javali_tests/not ours/new/HW3_MarLin/type_error/cast/ErrArrayCast.javali
class A {

}

class B extends A {

}

class C {

}

class Main {

   void main() {
      A[] a;
      B[] b;
      
      a = new A[0];
      b = new B[0];
      
      a = (A[]) b;
   }
}
